art: build pixel paper plane with T keel